2011-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*.[ch]
    Update copyright years.

2011-01-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add AM_SILENT_RULES and other tweaks.

    * src/common.c
    Fix bug in sfx_mix_mono_read_double() where a bunch of crap got appended to
    the end of the mixed down file. Thanks to Tom Szilagyi for the bug report.
    Remove cruft.

2010-04-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/jackplay.c
    Use jack_client_open() instead of deprecated jack_client_new().

    * man/sndfile-spectrogram.1
    Fix two typos reported by Igor Murzov.

2010-02-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Detect presence of libsamplerate.

    * src/resample.c Makefile.am
    Add file originally from the libsamplerate source distribution and hook
    into build.

2009-12-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*c
    Remove 'sndfile-' parts of file names.

    * src/jackplay.c
    Reorder JACK initialisation calls to remove click at start of playback.

2009-12-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Don't test for a fortran compiler.

    * man/sndfile-generate-chirp.1 man/sndfile-mix-to-mono.1
	    man/sndfile-spectrogram.1
    New man pages.

    * Makefile.am
    Hook new man pages into build.

    * NEWS doc/index.html
    Update for 1.03 release.

2009-12-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * M4/*.m4 configure.ac
    Rename custom M4 macros to MN_*.

    * man/sndfile-jackplay.1 Makefile.am
    Add man page for sndfile-jackplay.

    * doc/index.html
    Add sndfile-jackplay.

2009-12-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/sndfile-merge.c
    Remove this (moved to libsndfile source distribution).

    * src/sndfile-jackplay.c
    Add file originally from the libsndfile source distribution.
